profilelist1exp/unpackaged/objects/CMAP_LanguageLocaleKeys__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Avaliable_for_MLUR_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to represent languages available for MLUR template document</description>
        <label>Avaliable for MLUR Template?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Direct_Codes__c</fullName>
        <label>Partner Direct Codes</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>CMAP_LanguageLocaleKeys</label>
</CustomObject>